--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,5 +1,6 @@
 .banner {
-    background: url("https://media.cntraveler.com/photos/5db1d0dd11c1e500092e7133/master/pass/airbnb-ski-aspen-28328347.jpg") center center;
+    background: url("https://www.airbus.com/sites/g/files/jlcbta136/files/styles/airbus_608x608/public/2022-02/A320neo%20Family.jpg?itok=B2UJWlDM") center center;
+    background-size: cover;
     height: 50vh;
     position: relative;
   }
