--- a/src/Header.css
+++ b/src/Header.css
@@ -7,7 +7,14 @@
     background-color: white;
     z-index: 100;
     width: 100%;
+    font-size: 20px;
+    font-weight: 400;
+    max-width: 1300px;
+    width: 85%;
+    margin: 0 auto;
+
   }
+
   
   .header__icon {
     object-fit: contain;
@@ -30,6 +37,10 @@
     border: none;
     padding: 10px;
     outline-width: 0;
+    /* border: 2px solid black; */
+    border-radius: 7px;
+    height: 40px;
+
   }
   
   .header__right {
